--- a/ProyectoFinalAR/angular.json
+++ b/ProyectoFinalAR/angular.json
@@ -27,9 +27,12 @@
               "src/assets"
             ],
             "styles": [
+              "ProyectoFinalAR/node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "ProyectoFinalAR/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
